# ocaml-kafka

discover/: discover.ml
lib/: dune
lib_async/: dune
lib_lwt/: dune
