(library
 (name kafka_async)
 (public_name kafka_async)
 (libraries kafka async)
 (preprocess (pps ppx_let))
 (c_names ocaml_async_kafka)
 ; the -I and -L flags are required for freebsd, harmless elsewhere
 (c_flags (:include c_flags.sexp))
 (c_library_flags (:include c_library_flags.sexp)))

(rule
  (targets c_flags.sexp c_library_flags.sexp)
  (deps (:gen ../discover/discover.exe))
  (action (run %{gen})))

(copy_files ../lib/ocaml_kafka.h)
